[project]
name = "startup-funding-analysis"
version = "0.1.0"
description = "A Streamlit app for interactive analysis and visualization of startup funding data from CSV datasets."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "streamlit>=1.45.1",
]
